# pythic

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  test.py
.cmake/api/v1/reply/: cache-v2-402e3580498e0b3214a2.json  cmakeFiles-v1-fa6ae23bc44fda66dc3e.json  codemodel-v2-99895bf0747f02bb20b2.json  index-2023-11-05T21-42-54-0460.json  target-pythic-7c22f2028ad1370b4d38.json
.github/workflows/: python-package.yml
include/: pythicConfig.h  pythicConfig.h.in
pythic/: pythic.c
src/pythic/: __init__.py
src/pythic/_core/: CMakeLists.txt  pythic.c  pythic.h  pythicConfig.h.in
src/pythic/core/: __init__.py  _pythic.pyi
