[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythic"
authors = [
  { name="Carter Canedy", email="cartercanedy42@gmail.com" },
]
description = "Lightweight and simple data querying algorithms implemented in C."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = [ "version" ]

[tool.hatch.version]
path = "src/pythic/__version__.py"

[tool.hatch.build]
sources = [ "src" ]
exclude = [ "*" ]
include = [ "src/pythic" , "src/pythic/*" , "src/pythic/_pythic.so" ]
directory = "./build"
artifacts = [ "src/pythic/_pythic.so" ]
